objects/Activity.object
<CustomObject>
    <fields>
        <fullName>TW1_A_solicitacao_viavel__c</fullName>
        <label>A solicitação é viável?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aceite_Cliente__c</fullName>
        <label>Aceite do Cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Acoes_Realizadas__c</fullName>
        <label>Ações Realizadas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planilha de Rescisão</fullName>
                </value>
                <value>
                    <fullName>Negociação com o cliente</fullName>
                </value>
                <value>
                    <fullName>Proposta de Pagamento</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <isActive>false</isActive>
                    <label>Não</label>
                </value>
                <value>
                    <fullName>Sim</fullName>
                    <isActive>false</isActive>
                    <label>Sim</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Ajuste_Necessario__c</fullName>
        <label>Ajuste Necessário?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Alteracao_viavel__c</fullName>
        <label>Alteração viável?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aprovacao_Analise_Credito__c</fullName>
        <label>Aprovação Análise de Crédito?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aprovacao_Solicitacao__c</fullName>
        <label>Aprovação da Solicitação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprovada</fullName>
                </value>
                <value>
                    <fullName>Reprovada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Arrematado_menor_valor__c</fullName>
        <label>Arrematado pelo menor valor?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Imovel_Arrematado__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Boleto_Enviado__c</fullName>
        <label>Boleto Enviado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cartorio_Parceiro__c</fullName>
        <label>Cartório Parceiro?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Atividades</relationshipLabel>
        <relationshipName>Atividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cheque_Administrativo_Solicitado__c</fullName>
        <label>Cheque Administrativo Solicitado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Compareceu__c</fullName>
        <label>Cliente Compareceu?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Respondeu__c</fullName>
        <label>Cliente Respondeu?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente_entrou_em_contato__c</fullName>
        <label>Cliente entrou em contato?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente_far_com_cart_rio_parceiro__c</fullName>
        <label>Cliente fará com cartório parceiro?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Condicao_Pagamento__c</fullName>
        <label>Condição de Pagamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Condicoes_Reprovadas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condições Reprovadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Contrato_Venda__c</fullName>
        <label>Contrato de Venda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                    <label>PCV Pública com financiamento</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>PCV Particular com financiamento</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>PCV Pública à vista</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>PCV Particular à vista</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Recibo de sinal com prev. Financiamento</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Recibo de sinal a vista</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Recibo de sinal com prev. AF</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>CV com AF Particular</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>CV Pública</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Rescisão Pública</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Rescisão Particular</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Cessão de Direitos Pública</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Cessão de Direitos Particular</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>PCV Particular com previsão de AF</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>CV com AF Pública</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>PCV Pública com previsão de AF</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Cessão Pública de AF</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Cessão Particular de AF</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Dação em pagamento</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Aditamento de AF</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>PCV Pública com recursos próprios</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>PCV Particular com recursos próprios</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Data_Agendamento__c</fullName>
        <label>Data Agendamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Ap_Rep_Analise_Credito__c</fullName>
        <label>Data Ap/Rep Análise de Crédito</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Assinatura_Banco_Interveniente__c</fullName>
        <label>Data Assinatura Banco Interveniente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Assinatura_Banco__c</fullName>
        <label>Data Assinatura Banco</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Contrato__c</fullName>
        <label>Data do Contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Entrada_Cartorio__c</fullName>
        <label>Data Entrada Cartório</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Para_Assinatura__c</fullName>
        <label>Data Para Assinatura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Primeira_Tentativa_Contato__c</fullName>
        <label>Data Primeira Tentativa Contato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_SegundaTentativa_Contato__c</fullName>
        <label>Data Segunda Tentativa Contato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Terceira_Tentativa_Contato__c</fullName>
        <label>Data Terceira Tentativa Contato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_Registro__c</fullName>
        <label>Data do Registro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao_Atividade__c</fullName>
        <label>Descrição da Atividade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Devolucao_Amigavel__c</fullName>
        <label>Devolução Amigável?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Dias_Atividade_Aberta__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias Atividade Aberta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Divida_sera_toda_financiada__c</fullName>
        <label>Dívida será toda financiada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Docs_Entregues_Analise_de_Credito__c</fullName>
        <label>Documentos Entregues-Análise de Crédito</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identidade</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>Comprovante de Residência</fullName>
                </value>
                <value>
                    <fullName>3 Últimos Contracheques</fullName>
                </value>
                <value>
                    <fullName>Última declaração de Imposto de Renda</fullName>
                </value>
                <value>
                    <fullName>Extratos Bancários</fullName>
                </value>
                <value>
                    <fullName>Ficha Cadastral Banco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Documentacao_correta__c</fullName>
        <label>Documentação correta?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Documentos_Entregues__c</fullName>
        <label>Documentos Entregues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Enquadramento_realizado__c</fullName>
        <label>Enquadramento realizado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Entrega_de_Chaves_em_paralelo__c</fullName>
        <label>Entrega de Chaves em paralelo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Enviar_Contraproposta__c</fullName>
        <label>Enviar Contraproposta?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Aceite_Cliente__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Enviar_para_Aprovacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar para Aprovação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Envio_Positivo__c</fullName>
        <label>Envio Positivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Escalonar_Caso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalonar Caso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Existe_Cheque_Boleto_Anexado__c</fullName>
        <label>Existe Cheque/Boleto Anexado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Existe_Pendencia_Condominial__c</fullName>
        <label>Existe Pendência Condominial?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Existem_Pendencias__c</fullName>
        <label>Existem Pendências?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Existem_Valores_Devolver__c</fullName>
        <label>Existem Valores a Devolver?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Financiamento_Banco_Financiador__c</fullName>
        <label>Financiamento com Banco Financiador?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Forma_Entrega__c</fullName>
        <label>Forma de Entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presencial</fullName>
                </value>
                <value>
                    <fullName>Expedição</fullName>
                </value>
                <value>
                    <fullName>Correios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imovel_Arrematado__c</fullName>
        <label>Imóvel Arrematado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Kit_Chaves_Completo__c</fullName>
        <label>Kit de Chaves Completo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Minuta_Anexada__c</fullName>
        <label>Minuta Anexada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Modificacoes_foram_cadastradas_BRZ__c</fullName>
        <label>Modificações foram cadastradas no BRZ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Motivo_Cancelamento__c</fullName>
        <label>Motivo Cancelamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Motivo_Reprovacao_Analise_Credito__c</fullName>
        <label>Motivo Reprovação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_N_Cheque__c</fullName>
        <label>Nº Cheque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_N_Cheque_do_Caso__c</fullName>
        <formula>TW1_Caso__r.TW1_N_Cheque__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº Cheque do Caso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Necessidade_de_reassinatura__c</fullName>
        <label>Necessidade de reassinatura?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Aprovacao_Diretoria__c</fullName>
        <label>Necessita Aprovação da Diretoria?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Negociacao_Aprovada__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Atualizar_no_UAU_CRM__c</fullName>
        <label>Necessita Atualizar no UAU/CRM?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Receber_Documentos__c</fullName>
        <label>Necessita Receber Documentos?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_agendar_cliente__c</fullName>
        <label>Necessita agendar com cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_assinatura_banco__c</fullName>
        <label>Necessita assinatura do banco?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_de_implanta_o__c</fullName>
        <label>Necessita de implantação?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_enviar_Banco_Interveniente__c</fullName>
        <label>Necessita enviar Banco Interveniente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_perguntar_obra__c</fullName>
        <label>Necessita perguntar a obra?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Negociacao_Aprovada__c</fullName>
        <label>Negociação Aprovada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Negociacao_Bem_Sucedida__c</fullName>
        <label>Negociação Bem Sucedida?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Numero_Registro__c</fullName>
        <label>Numero de Registro</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_O_empreendimento_possui_socios__c</fullName>
        <label>O empreendimento possui sócios?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Orcamento__c</fullName>
        <label>Orçamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Pagamento_Internalizado__c</fullName>
        <label>Pagamento Internalizado?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Existe_Pendencia_Condominial__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Pagamento_Realizado__c</fullName>
        <label>Pagamento Realizado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Pendencias_Corrigidas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pendencias Corrigidas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Registro_sera_realizado_pelo_cliente__c</fullName>
        <label>Registro será realizado pelo cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Renegociacao_Bem_Sucedida__c</fullName>
        <label>Renegociação Bem Sucedida?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Repasse_sera_realizado__c</fullName>
        <label>Repasse será realizado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>